--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd client npm start",
+    "client": "npm --prefix client start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
