--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/andriussvilys/backend-svetaine#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chokidar": "^3.0.2",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "heroku": "^7.29.0",
