--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
-    "mongoose": "^5.6.11"
+    "mongoose": "^5.6.11",
+    "react-bootstrap": "^1.0.0-beta.12"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
