--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "mongoose": "^5.6.11",
+    "multer": "^1.4.2",
     "react-bootstrap": "^1.0.0-beta.12"
   },
   "devDependencies": {
