--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "open-iconic": "^1.1.1",
     "popper": "^1.0.1",
     "react": "^16.9.0",
+    "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
