--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.11",
     "multer": "^1.4.2",
-    "react-bootstrap": "^1.0.0-beta.12"
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
