--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "homepage": "https://github.com/andriussvilys/backend-svetaine#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chokidar": "^3.3.0",
     "concurrently": "^4.1.2",
-    "express": "^4.17.1", 
+    "express": "^4.17.1",
     "mongoose": "^5.6.11",
     "multer": "^1.4.2",
     "react-bootstrap": "^1.0.0-beta.12",
