--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.11",
     "multer": "^1.4.2",
+    "picomatch": "^2.1.1",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-router-dom": "^5.1.2"
   },
