--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "pdfjs-dist": "^2.2.228",
-    "react": "^16.12.0",
+    "pdfjs-dist": "^2.3.200",
+    "react": "^16.13.1",
     "react-beautiful-dnd": "^11.0.5",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.9.0",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "react-swipeable": "^5.5.0"
+    "react-scripts": "^3.4.1",
+    "react-swipeable": "^5.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
