--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "chokidar": "^3.3.1",
+    "chokidar": "^3.4.0",
     "cjs": "0.0.11",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
@@ -33,10 +33,10 @@
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
     "mongodb": "^3.5.2",
-    "mongoose": "^5.8.9",
+    "mongoose": "^5.9.10",
     "multer": "^1.4.2",
     "picomatch": "^2.2.1",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.1",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
