--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-pinch-and-zoom": "^1.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-swipeable": "^5.5.1"
