--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,12 @@
   "name": "interface",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://andriussvilys.github.io/backend-svetaine",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.2.0",
+    "gh-pages-deploy": "^0.5.1",
     "pdfjs-dist": "^2.3.200",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^11.0.5",
@@ -20,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
