--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "gh-pages": "^2.2.0",
-    "gh-pages-deploy": "^0.5.1",
     "pdfjs-dist": "^2.3.200",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^11.0.5",
@@ -42,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
