--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "interface",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://andriussvilys.github.io/backend-svetaine/",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
