test-page script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "build-prod": "npm run-script build --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test-page": "start test-page.html"
   },
   "repository": {
     "type": "git",
