--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@shopify/draggable": "^1.0.0-beta.8",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "pdfjs-dist": "^2.3.200",
