--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@shopify/draggable": "^1.0.0-beta.8",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "keen-slider": "^5.2.1",
     "pdfjs-dist": "^2.3.200",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^11.0.5",
