--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-image-magnify": "^2.7.4",
     "react-pinch-and-zoom": "^1.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
