--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "multer": "^1.4.2",
     "picomatch": "^2.2.1",
     "react-bootstrap": "^1.0.1",
-    "react-router-dom": "^5.1.2"
+    "react-img-zoom": "^0.1.0",
+    "react-router-dom": "^5.1.2",
+    "react-slick": "^0.27.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "install-peers": "^1.0.3",
