--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "@shopify/draggable": "^1.0.0-beta.8",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "keen-slider": "^5.2.1",
+    "keen-slider": "^5.2.3",
+    "node-sass": "^4.14.1",
     "pdfjs-dist": "^2.3.200",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^11.0.5",
@@ -18,9 +19,10 @@
     "react-img-zoom": "^0.1.0",
     "react-pinch-and-zoom": "^1.2.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "react-slick": "^0.27.2",
     "react-swipeable": "^5.5.1",
+    "react-use-gesture": "^7.0.16",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
