--- a/client/.gitignore
+++ b/client/.gitignore
@@ -21,6 +21,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+/node_modules
 node_modules/*
 !node_modules/react-pinch-and-zoom
 package-lock.json
