--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "build-prod": "npm run-script build --prefix client",
+    "build_client": "npm build --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku_run": "concurrently \"npm run build_client\" \"npm run server\" ",
     "test-page": "npm start test-page.html"
   },
   "repository": {
