--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
@@ -50,6 +48,5 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
   }
 }
