--- a/package.json
+++ b/package.json
@@ -35,19 +35,15 @@
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
+    "jimp": "^0.9.8",
+    "jquery": "^3.6.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
-    "picomatch": "^2.2.1",
-    "react-bootstrap": "^1.0.1",
-    "react-img-zoom": "^0.1.0",
-    "react-router-dom": "^5.1.2",
-    "react-slick": "^0.27.0",
-    "slick-carousel": "^1.8.1"
+    "picomatch": "^2.2.1"
   },
   "devDependencies": {
     "install-peers": "^1.0.3",
-    "jimp": "^0.9.8",
     "nodemon": "^1.19.4"
   }
 }
